# TileR

./: .clang-format  .gitignore  CMakeLists.txt  README.md  STYLE.md
data/: lambstothecosmicslaughter.aup
data/dics/: all_star_short.dic  all_star_short.lm  all_star_short.txt  rick_s1_e9.dic  rick_s1_e9.lm  rick_s1_e9.txt
docs/: codec.txt
include/: ASource.hpp  AV.hpp  Debug.hpp  SampleBlock.hpp
src/: ASource.cpp  AV.cpp  main.cpp  packet.hpp  source.cpp  source.hpp  utils.hpp
